[package]
name = "swatcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
csscolorparser = "0.5"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_with = "1.9"
thiserror = "1"
tokio = { version = "1.10", features = ["full"] }
warp = "0.3"

[dev-dependencies]
serde_test = "1"
serde_urlencoded = "0.7"
